tests/ui/typeck/span-bug-issue-121410.stderr
error[E0308]: mismatched types
  --> $DIR/span-bug-issue-121410.rs:9:13
   |
LL |         let (_, t2) = foo.x;
   |             ^^^^^^^   ----- this expression has type `String`
   |             |
   |             expected `String`, found `(_, _)`
   |
   = note: expected struct `String`
               found tuple `(_, _)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
